# chromnn

./: README.md  pyproject.toml
scripts/: one_hot_encode.py  prepare_data.py  train_model.py
src/chromnn/: __init__.py  data_prep.py  fasta_parser.py  models.py  train.py  version.py
src/chromnn/cli/: __init__.py
